--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "4.2.*"
+		"laravel/framework": "4.2.*",
+		"intervention/image": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
@@ -14,6 +15,7 @@
 			"app/models",
 			"app/database/migrations",
 			"app/database/seeds",
+			"app/library",
 			"app/tests/TestCase.php"
 		]
 	},
